--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1262,7 +1262,7 @@ p {
   white-space: nowrap;
 
   &:hover:not(:disabled) {
-    background: darken($primary-color, 8%);
+    background: color.adjust($primary-color, $lightness: -8%);
     transform: translateY(-1px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   }
