--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -900,7 +900,7 @@ p {
 
 .lesson-tile-keys {
   display: flex;
-  gap: 0.25rem;
+  // gap: 0.25rem;
   flex-wrap: wrap;
   justify-content: center;
   font-size: 0.75rem;
