--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,6 +92,15 @@ p {
     }
   }
 
+  &-warning {
+    background-color: $warning-color;
+    color: white;
+
+    &:hover {
+      background-color: color.adjust($warning-color, $lightness: -5%);
+    }
+  }
+
   &-large {
     padding: 1rem 2rem;
     font-size: 1.125rem;
